# TinyCompiler

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Compilerlab3  Makefile  README.md  cmake_install.cmake  compilerlab1  lex.yy  lex.yy.cpp  lexer.cpp  log.md  parser.cpp  parser.hpp  parser.y  sign_table.hpp  tcc  test.c  tokenrizer.l
bison_example/: README.md  calc  calc.y  lex.yy.c  makefile  parser.y  run.sh  scanner.l  tcc  test.asm  test.c  y.output  y.tab.c  y.tab.h
docs/: 202111030012 冯亦菲 实验报告2.docx  lab02_write_up.md
lex.yy.dSYM/Contents/: Info.plist
lex.yy.dSYM/Contents/Resources/DWARF/: lex.yy
lex.yy.dSYM/Contents/Resources/Relocations/aarch64/: lex.yy.yml
src/: MIPS.h  compile.cpp  compilerlab1.cpp  lexer.l  main.cpp  parser.y  sign_table.cpp  sign_table.hpp  tcc  tcc.cpp  tcc.hpp  testcase.minic  tokenrizer.l
submission/: CMakeCache.txt  CMakeLists.txt  Compilerlab2  Makefile  cmake_install.cmake  lex.yy.cpp
test/: a.out  e07_4.py  lex.yy.c  test_break.c  test_compile  test_compile.cpp  test_flex_rule.l  test_sign_table.cpp  test_tokenrizer.cpp  testcase.minic  testcase2.minic  testcase3.minic  testcase4.minic  testcase5.minic
test/cases_2/: e114.c
test/cases_3/: e09.c  e09.py
test/test_compile.dSYM/Contents/: Info.plist
test/test_compile.dSYM/Contents/Resources/DWARF/: test_compile
test/test_compile.dSYM/Contents/Resources/Relocations/aarch64/: test_compile.yml
